# 3d_physics_simulation

./: .gitignore  CMakeLists.txt  todo_list.txt
plys_1/plys/: cilindro.ply  esfera.ply  soporte.ply  telescopico.ply
src/: main.cpp
src/controller/: controller.cpp  controller.h  entradaTeclado.cpp  entradaTeclado.h  mouse.cpp  mouse.h
src/model/: modelo.cpp  modelo.h
src/model/bodies/: body.cpp  body.h
src/model/bodies/auxBodies/: axisBody.cpp  axisBody.h
src/model/bodies/rigidBodies/: cubeRigidBody.cpp  cubeRigidBody.h  prismRigidBody.cpp  prismRigidBody.h  rigidbody.cpp  rigidbody.h  sphereRigidBody.cpp  sphereRigidBody.h
src/model/drawers/: axisDrawer.cpp  axisDrawer.h  cubeDrawer.cpp  cubeDrawer.h  drawer.cpp  drawer.h  icoDrawer.cpp  icoDrawer.h  prismDrawer.cpp  prismDrawer.h  sphereDrawer.cpp  sphereDrawer.h
src/utils/: color.cpp  color.h  constants.h  matrix3.cpp  matrix3.h  quaternion.cpp  quaternion.h  utils.cpp  utils.h  vector3.cpp  vector3.h
src/view/: renderer.cpp  renderer.h
